# archflow-studio

./: .gitattributes  .gitignore  LICENSE  NOTICE  PREVIEW_NOTICE.txt  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
distributions/xiaohongshu/archflow/: SKILL.md
distributions/xiaohongshu/archflow/assets/: integration-lock.json
distributions/xiaohongshu/archflow/references/: autolisp-commands.md  cad-com.md  deployment.md  legal-research.md  modeling.md  permissions-and-security.md  render-views.md  setup.md  third-party-notices.md  workstation-setup.md
distributions/xiaohongshu/archflow/scripts/: CadBridge.ps1  archflow_mcp_server.py  architectural_pipeline.py  build_sketchup_rbz.py  build_xhs_package.py  cad-cli.ps1  deploy_sketchup_mcp.ps1  (+4 more)
docs/: architecture.md  distribution.md  roadmap.md  website-user-guide.zh-CN.md
docs/assets/: README.md
examples/detached-house/: archflow.project.json
examples/detached-house/inputs/: requirements.txt
examples/detached-house/model/: building_model.json
installer/windows/: ArchFlow.Setup.ps1  build_release.ps1
plugins/archflow-studio/: .mcp.json
plugins/archflow-studio/.codex-plugin/: plugin.json
plugins/archflow-studio/mcp/: archflow_mcp_server.py
release/: release-gates.json
schemas/: archflow-project.schema.json
scripts/: generate_sbom.py  release_check.py
src/archflow/: __init__.py  pipeline.py  project.py
tests/: test_archflow_mcp_server.py  test_pipeline.py  test_project.py  test_unified_skill.py  test_xiaohongshu_skill.py  windows_installer_smoke.ps1
(+44 files in other folders)
